Update CLAUDE.md