@@ -1,262 +1,114 @@
 # CLAUDE.md
 
-This file provides guidance to Claude Code (claude.ai/code) when working with code in this repository.
+本文件为 Claude Code (claude.ai/code) 提供在本仓库中工作时的指导。
 
-## Build Commands
+## 构建命令
 
-This is a Gradle-based project. Use `./gradlew` (or `gradlew.bat` on Windows) for all build operations.
+本项目基于 Gradle 构建。使用 Gradle Wrapper（`./gradlew` 或 Windows 上的 `gradlew.bat`）进行所有构建。
 
-### Common Build Tasks
+**构建项目：**
+- `./gradlew build` - 构建整个项目（包括测试）
+- `./gradlew assemble` - 构建但不运行测试
+- `./gradlew clean build` - 清理并重新构建
+- `./gradlew :spring-core:build` - 构建指定模块
 
-```bash
-# Build the entire project (compile, test, check)
-./gradlew build
+**运行测试：**
+- `./gradlew test` - 运行所有测试
+- `./gradlew :spring-core:test` - 运行指定模块的测试
+- `./gradlew test --tests "org.springframework.core.io.ResourceTests"` - 运行单个测试类
+- `./gradlew test --tests "*Resource*"` - 运行匹配模式的测试
+- `./gradlew check` - 运行所有检查（测试、代码风格检查等）
+- `./gradlew check antora` - 完整 CI 构建（CI 中使用）
 
-# Run all tests
-./gradlew test
+**测试工具链（Java 版本）：**
+- `./gradlew check -PtestToolchain=21` - 使用 Java 21 运行测试
+- `./gradlew check -PtestToolchain=25` - 使用 Java 25（抢先体验版）运行测试
+- `./gradlew java21Test` - 运行 Java 21 特定测试
+- `./gradlew runtimeHintsTest` - 运行 GraalVM 原生镜像提示测试
 
-# Run all checks including tests and RuntimeHints tests
-./gradlew check
+**IDE 集成：**
+- `./gradlew eclipse` - 生成 Eclipse 项目文件
+- `./gradlew idea` - 生成 IntelliJ IDEA 项目文件
+- 导入 IDE 前预编译：`./gradlew :spring-oxm:compileTestJava :spring-core:compileJava`
 
-# Clean build artifacts
-./gradlew clean
+**生成文档：**
+- `./gradlew javadoc` - 生成 Javadoc
+- `./gradlew antora` - 生成 Antora 文档（输出位置：`framework-docs/build/site/index.html`）
+- `./gradlew dokkaHtml` - 生成 Kotlin 文档
 
-# Publish to local Maven repository
-./gradlew publishToMavenLocal
+**发布：**
+- `./gradlew -PdeploymentRepository=$(pwd)/deployment-repository build publishAllPublicationsToDeploymentRepository` - 发布到本地仓库
+
+## 项目架构
+
+**模块依赖关系（自下而上）：**
+```
+spring-core → spring-beans → spring-context → web/data 模块
 ```
 
-### Module-Specific Builds
-
-```bash
-# Build a specific module (e.g., spring-core)
-./gradlew :spring-core:build
-
-# Run tests for a specific module
-./gradlew :spring-core:test
-
-# Compile only a specific module
-./gradlew :spring-core:compileJava
-```
-
-### Running Single Tests
-
-```bash
-# Run a specific test class
-./gradlew :spring-core:test --tests "org.springframework.core.io.support.PathMatchingResourcePatternResolverTests"
-
-# Run a specific test method
-./gradlew :spring-core:test --tests "org.springframework.core.io.support.PathMatchingResourcePatternResolverTests.testMethodName"
-```
-
-### Special Test Types
-
-```bash
-# Run RuntimeHints tests (for GraalVM native image compatibility)
-./gradlew runtimeHintsTest
-
-# Run integration tests
-./gradlew :integration-tests:test
-
-# Run JMH micro-benchmarks
-./gradlew jmh
-```
-
-### Documentation
-
-```bash
-# Generate reference documentation (Antora)
-./gradlew antora
-
-# View generated docs
-open framework-docs/build/site/index.html
-```
-
-### IDE Setup
-
-```bash
-# Precompile spring-oxm before IDEA import (required due to repackaged dependencies)
-./gradlew :spring-oxm:compileTestJava
-
-# Generate IDE metadata
-./gradlew idea
-./gradlew eclipse
-```
-
-## Project Structure
-
-The Spring Framework is organized into 24 subprojects:
-
-**Core Container:**
-- `spring-core` - Core utilities, resource handling, type conversion
-- `spring-beans` - Bean factory and dependency injection
-- `spring-context` - Application context, events, component scanning
-- `spring-context-support` - Additional context support (caching, scheduling)
-- `spring-expression` - Spring Expression Language (SpEL)
-- `spring-aop` - Aspect-Oriented Programming support
-
-**Data Access:**
-- `spring-jdbc` - JDBC abstraction
-- `spring-tx` - Transaction management
-- `spring-orm` - JPA/Hibernate integration
-- `spring-r2dbc` - Reactive database connectivity
-
-**Web:**
-- `spring-web` - Core web support (HTTP, client/server)
-- `spring-webmvc` - Servlet-based MVC framework
-- `spring-webflux` - Reactive web framework
-- `spring-websocket` - WebSocket support
-- `spring-messaging` - Message handling abstraction
-
-**Testing:**
-- `spring-test` - TestContext framework and testing support
-- `spring-core-test` - Core testing utilities including RuntimeHints agent
-
-**Infrastructure:**
-- `framework-docs` - Reference documentation (AsciiDoc/Antora)
-- `integration-tests` - Cross-module integration tests
-
-## High-Level Architecture
-
-### Dependency Injection Container
-
-The core IoC container is implemented across `spring-core`, `spring-beans`, and `spring-context`:
-
-- **BeanFactory** (`spring-beans`) - The root interface for bean container
-- **ApplicationContext** (`spring-context`) - Adds event propagation, resource loading, internationalization
-- **BeanDefinition** - Metadata for bean configuration (class, scope, properties, etc.)
-- **BeanPostProcessor** - Extension point for custom bean initialization logic
-
-Key source locations:
-- Bean factories: `spring-beans/src/main/java/org/springframework/beans/factory/`
-- Application context: `spring-context/src/main/java/org/springframework/context/support/`
-- Annotation config: `spring-context/src/main/java/org/springframework/context/annotation/`
-
-### Resource Abstraction
-
-Spring provides a unified `Resource` interface for loading files, classpath resources, URLs:
-
-- **Resource** - Abstraction over file/URL/classpath resources
-- **ResourceLoader** - Strategy for loading resources
-- **PathMatchingResourcePatternResolver** - Supports Ant-style patterns (e.g., `classpath*:com/example/**/*.xml`)
-
-Key source: `spring-core/src/main/java/org/springframework/core/io/`
-
-### Type Conversion System
-
-- **Converter** SPI - Simple type conversion interface
-- **ConversionService** - Registry and execution of converters
-- **PropertyEditor** - JavaBeans property editor support (legacy)
-- **ResolvableType** - Generic type resolution utilities
-
-Key source: `spring-core/src/main/java/org/springframework/core/convert/`
-
-### Annotation Processing
-
-Spring has sophisticated annotation introspection supporting composed annotations and attribute overrides:
-
-- **AnnotatedElementUtils** - High-level annotation retrieval with merging
-- **AnnotationUtils** - Low-level annotation utilities
-- **@AliasFor** - Annotation attribute aliasing mechanism
-- **MergedAnnotations** - Immutable representation of merged annotation attributes
-
-Key source: `spring-core/src/main/java/org/springframework/core/annotation/`
-
-### AOP Infrastructure
-
-- **ProxyFactory** - Creates AOP proxies (JDK dynamic or CGLIB)
-- **Advisor** - Combines pointcut and advice
-- **@AspectJ support** - Annotation-driven aspects
-- **Load-time weaving** - AspectJ LTW integration
-
-Key sources:
-- Core AOP: `spring-aop/src/main/java/org/springframework/aop/`
-- AspectJ integration: `spring-aspects/src/main/java/org/springframework/aspects/`
-
-### Web Frameworks
-
-**Spring MVC** (Servlet-based):
-- **DispatcherServlet** - Front controller
-- **@Controller/@RequestMapping** - Annotation-driven controllers
-- **HandlerMapping/HandlerAdapter** - Request routing and execution
-
-**Spring WebFlux** (Reactive):
-- **DispatcherHandler** - Reactive front controller
-- **RouterFunction** - Functional routing (alternative to annotations)
-- **ReactiveAdapterRegistry** - Adapts reactive types (Reactor, RxJava)
-
-Key sources:
-- Spring MVC: `spring-webmvc/src/main/java/org/springframework/web/servlet/`
-- WebFlux: `spring-webflux/src/main/java/org/springframework/web/reactive/`
-
-### Ahead-of-Time (AOT) Compilation
-
-For GraalVM native image support:
-
-- **RuntimeHints** - Declares reflection, resources, proxies, serialization requirements
-- **BeanFactoryInitializationAotProcessor** - Contributes AOT processing for bean factories
-- **RuntimeHintsAgent** - Java agent for detecting runtime hints during tests
-
-Key sources:
-- AOT infrastructure: `spring-core/src/main/java/org/springframework/aot/`
-- Context AOT: `spring-context/src/main/java/org/springframework/context/aot/`
-- Test agent: `spring-core-test/src/main/java/org/springframework/core/test/tools/`
-
-## Testing Approach
-
-- **JUnit 5** (Jupiter) is the primary testing framework
-- **Mockito** for mocking
-- **AssertJ** for fluent assertions
-- **@EnabledIfRuntimeHintsAgent** - Conditionally run tests requiring the RuntimeHints agent
-
-Tests are typically organized alongside source code in `src/test/java`.
-
-## Key Conventions
-
-### Code Style
-
-- Follow existing code formatting in the files you edit
-- Use tabs for indentation (not spaces)
-- Maximum line length: 120 characters
-- Checkstyle configuration is in `buildSrc/config/`
-
-### Commit Messages
-
-- Use 55 characters max for subject line
-- Use 72 characters max per line for description
-- Reference GitHub issue: `Closes gh-12345`
-- All commits must include a `Signed-off-by` trailer (DCO required)
-
-Example:
-```
-Fix resource loading for jar:file: URLs
-
-This commit fixes an issue where resources with jar:file: URLs
-were not being resolved correctly on Windows.
-
-Closes gh-12345
-
-Signed-off-by: Your Name <email@example.com>
-```
-
-### Version Information
-
-- Current version: `6.2.16-SNAPSHOT` (defined in `gradle.properties`)
-- Baseline Java version: 17
-- Multi-release JARs support Java 21 features
-
-## Important Build Notes
-
-1. **Precompile spring-oxm before IDEA import** - Due to repackaged dependencies (XSD schemas), you must run `./gradlew :spring-oxm:compileTestJava` before importing into IntelliJ IDEA.
-
-2. **Exclude spring-aspects in IDEA** - The `spring-aspects` module contains AspectJ aspects that IntelliJ cannot compile. Exclude this module in Project Structure.
-
-3. **Gradle Toolchains** - The build uses Gradle toolchains to automatically download and use appropriate JDK versions. List available toolchains with `./gradlew -q javaToolchains`.
-
-4. **Optional Dependencies** - The build uses a custom `optional` configuration for dependencies that should be on the compile classpath but not propagated to dependents.
-
-## Reference Documentation
-
-- Reference docs source: `framework-docs/modules/ROOT/pages/`
-- Wiki pages: https://github.com/spring-projects/spring-framework/wiki
-- Build from Source wiki: https://github.com/spring-projects/spring-framework/wiki/Build-from-Source
-- Code Style wiki: https://github.com/spring-projects/spring-framework/wiki/Code-Style
+**核心层：**
+- `spring-core` - 基础工具类，`ResolvableType`，`CollectionFactory`，类型转换基础设施
+- `spring-beans` - Bean 容器：`BeanFactory`，`ListableBeanFactory`，`FactoryBean`，属性编辑器
+- `spring-context` - 应用运行时：`ApplicationContext`，事件传播，资源加载，`MessageSource`
+
+**Web 层（双栈架构）：**
+- `spring-web` - 公共基础设施：`WebApplicationInitializer`，HTTP 消息转换器
+- `spring-webmvc` - 基于 Servlet 的 MVC：`DispatcherServlet`，`HandlerMapping`，`HandlerAdapter`，`ViewResolver`
+- `spring-webflux` - 响应式 Web：`DispatcherHandler`，与 MVC 并行的架构，基于 Project Reactor 构建
+
+**AOP 层：**
+- `spring-aop` - 基于代理的 AOP：`Pointcut`（由 `ClassFilter` + `MethodMatcher` 组成），`Advisor`，`Advice`，`AopProxy`（JDK/CGLIB）
+- `spring-aspects` - AspectJ 集成：加载时织入，支持 `@AspectJ` 注解
+
+**数据访问层：**
+- `spring-jdbc` - `JdbcTemplate`，`DataSourceUtils`，异常转换为 `DataAccessException`
+- `spring-tx` - 事务抽象：`PlatformTransactionManager`，`TransactionDefinition`，`TransactionStatus`
+- `spring-orm` - ORM 集成（Hibernate、JPA），使用相同的事务抽象
+
+**关键设计模式：**
+- 工厂模式：`BeanFactory`，`FactoryBean`，`ProxyFactoryBean`
+- 策略模式：`HandlerMapping`，`TransactionManager`，`ViewResolver`
+- 模板模式：`JdbcTemplate`，`AbstractPlatformTransactionManager`
+- 代理模式：Spring AOP，事务代理
+- 基于接口的编程：所有抽象都通过接口定义
+
+**测试约定：**
+- JUnit 5 (Jupiter) + Platform Suite
+- 测试在 headless AWT 模式下运行，启用 Netty 严格泄漏检测
+- JVM 参数包含：`--add-opens=java.base/java.lang=ALL-UNNAMED`
+- CI 中启用测试重试（不稳定测试重试 3 次）
+
+## 构建配置
+
+**Java 版本：**
+- 最低要求：Java 17（BellSoft Liberica 发行版）
+- 测试工具链：Java 17、21、25
+- Kotlin：1.9.25（目标 JVM 17）
+
+**构建文件：**
+- `build.gradle` - 根构建配置
+- `settings.gradle` - 模块定义（21 个模块）
+- `gradle/spring-module.gradle` - spring-* 模块的标准配置
+- `gradle/toolchains.gradle` - JVM 工具链配置
+- `buildSrc/src/main/java/org/springframework/build/` - 构建约定插件
+
+**关键 Gradle 属性：**
+- 版本定义在 `gradle.properties` 中
+- 默认启用 Gradle Daemon、并行构建和构建缓存
+- 内存设置：`-Xmx2048m`
+
+## 贡献指南
+
+来自 `CONTRIBUTING.md`：
+- 向 `main` 分支提交 Pull Request（视情况考虑向后移植）
+- 所有提交必须包含 Signed-off-by 签名（DCO）
+- 提交信息格式：主题 55 个字符，描述每行 72 个字符
+- 使用 `Closes gh-XXXX` 引用 Issue
+- 代码风格定义在 wiki 中："Code Style" 和 "IntelliJ IDEA Editor Settings"
+
+## 重要注意事项
+
+- 某些模块需要在导入 IDE 前预编译，因为有生成的源代码（spring-oxm 使用 XJC）
+- spring-aspects 使用 AspectJ，可能导致 IDE 问题；可能需要在项目结构中排除
+- 为主源代码启用 NullAway 静态分析（空安全检查）
+- 每个模块都包含 JMH 微基准测试（使用 `./gradlew jmh` 运行）
